--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "birthday-wisher",
+  "name": "fb-birthday-wisher",
   "version": "0.1.0",
   "description": "Send birthday wishes to your facebook friends using this bot",
   "repository": {
